added hydra configs and first exps

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "quarterly-savannah",
+   "execution_count": null,
+   "id": "potential-intent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,21 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "federal-visit",
+   "execution_count": null,
+   "id": "played-cancer",
    "metadata": {},
    "outputs": [],
    "source": [
     "BS = 64\n",
     "FOLD = 0\n",
     "qtransform_params={\"sr\": 2048, \"fmin\": 20, \"fmax\": 1024, \"hop_length\": 32, \"bins_per_octave\": 8}\n",
-    "INPUT_PATH = Path(\"/home/trytolose/rinat/kaggle/g2net/input\")"
+    "INPUT_PATH = Path(\"/home/trytolose/rinat/kaggle/grav_waves_detection/input\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "reduced-least",
+   "execution_count": null,
+   "id": "reduced-supplier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "german-assessment",
+   "execution_count": null,
+   "id": "norman-christian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "seeing-jackson",
+   "execution_count": null,
+   "id": "prescribed-opening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,61 +108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "handmade-traffic",
+   "execution_count": null,
+   "id": "assisted-climate",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 38032\n",
-      "-rw-rw-r-- 1 trytolose trytolose 17079787 Aug 16 23:14 baseline_f0.pt\n",
-      "-rw-rw-r-- 1 trytolose trytolose 17079787 Aug 17 20:42 baseline_f0_part_epoch.pt\n",
-      "-rw-rw-r-- 1 trytolose trytolose     6901 Aug 17 12:10 inference.ipynb\n",
-      "-rw-rw-r-- 1 trytolose trytolose     5556 Aug 17 18:20 main.py\n",
-      "drwxrwxr-x 2 trytolose trytolose     4096 Aug 16 17:23 src\n",
-      "-rw-rw-r-- 1 trytolose trytolose  4760185 Aug 17 12:09 submission.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls -l"
+    "df = pd.read_csv(INPUT_PATH / \"training_labels.csv\")\n",
+    "\n",
+    "files = list((INPUT_PATH / \"train\").rglob(\"*.npy\"))\n",
+    "FILE_PATH_DICT = {x.stem: str(x) for x in files}\n",
+    "df[\"path\"] = df[\"id\"].apply(lambda x: FILE_PATH_DICT[x])\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=69)\n",
+    "df[\"fold\"] = -1\n",
+    "for f, (train_ids, val_ids) in enumerate(skf.split(df.index, y=df[\"target\"])):\n",
+    "    df.loc[val_ids, \"fold\"] = f\n",
+    "    \n",
+    "df = df[df[\"fold\"] == FOLD].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "greek-brake",
+   "execution_count": null,
+   "id": "north-substitute",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/trytolose/miniconda3/envs/audio/lib/python3.8/site-packages/nnAudio/utils.py:326: SyntaxWarning: If fmax is given, n_bins will be ignored\n",
-      "  warnings.warn('If fmax is given, n_bins will be ignored',SyntaxWarning)\n",
-      "  0%|                    | 0/1766 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CQT kernels created, time used = 0.0169 seconds\n",
-      "CQT kernels created, time used = 0.0050 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████| 1766/1766 [02:36<00:00, 11.27it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "val_ds = TrainDataset(df, mode=\"val\")\n",
+    "\n",
     "\n",
     "val_loader = DataLoader(\n",
     "    val_ds, shuffle=False, num_workers=12, batch_size=BS*2, pin_memory=False\n",
@@ -170,7 +143,7 @@
     "\n",
     "model = CustomModel(pretrained=False)\n",
     "model.cuda()\n",
-    "model.load_state_dict(torch.load(\"baseline_f0_part_epoch.pt\"))\n",
+    "model.load_state_dict(torch.load(\"baseline_f0.pt\"))\n",
     "\n",
     "val_pred = []\n",
     "model.eval()\n",
@@ -187,40 +160,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "medical-coalition",
+   "execution_count": null,
+   "id": "eight-isaac",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.        , 0.97921145, 0.33347988, ..., 0.24788715, 0.999997  ,\n",
-       "       0.07999594], dtype=float32)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "emerging-knife",
+   "execution_count": null,
+   "id": "emerging-portland",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['target'] = val_pred"
+    "df['target_pred'] = val_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "according-suspect",
+   "execution_count": null,
+   "id": "oriented-binding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "searching-ethiopia",
+   "execution_count": null,
+   "id": "informal-surface",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,19 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "assisted-harris",
+   "execution_count": null,
+   "id": "civil-fireplace",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 4.57M/4.57M [00:07<00:00, 669kB/s]\n",
-      "Successfully submitted to G2Net Gravitational Wave Detection"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kaggle competitions submit -c g2net-gravitational-wave-detection -f submission.csv -m \"public baseline\""
    ]
@@ -259,7 +211,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "municipal-mason",
+   "id": "russian-shareware",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "grand-invitation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_top_fp=df[df['target']==0].sort_values(\"target_pred\", ascending=False)[:10]\n",
+    "df_top_fp.to_csv(\"top_10_fp.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "second-editing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_min = df.sort_values(\"target_pred\")[:10].copy()\n",
+    "df_max = df.sort_values(\"target_pred\", ascending=False)[:10].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "entire-shaft",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mysterious-associate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total = pd.concat([df_max, df_min], ignore_index=True)\n",
+    "df_total.to_csv(\"top_min_max.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "direct-shore",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "surrounded-special",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "nuclear-workplace",
    "metadata": {},
    "outputs": [],
    "source": []
