--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aggressive-airport",
+   "id": "important-attitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,35 @@
     "from sklearn import metrics\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "sys.path.insert(0, \"../\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "multiple-champion",
+   "id": "attended-grammar",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.transforms import stack_bandpass_transform, stack_bandpass_turkey_transform, stack_turkey, dumb_transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "involved-stake",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_PATH = Path(\"/home/trytolose/rinat/kaggle/grav_waves_detection/input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lesser-unemployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,118 +65,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "isolated-notion",
+   "id": "armed-screw",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PARAMS = {\n",
-    "    \"sr\": 2048,\n",
-    "    \"fmin\": 30,\n",
-    "    \"fmax\": 400,\n",
-    "    \"hop_length\": 64,  # count of signal points used for 1 tranformed point\n",
-    "#     \"bins_per_octave\": 32,  # y-axe of transformed image depends from this parameter, for example [91,] if bins=16 and 42 if bins=8\n",
-    "}\n",
-    "INPUT_PATH = Path(\"/home/trytolose/rinat/kaggle/grav_waves_detection/input\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "faced-proposal",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cqt = CQT1992v2(**PARAMS) \n",
+    "class CFG:\n",
+    "    def __init__(self):\n",
+    "        self.qtransform_params = {\n",
+    "            'sr': 2048,\n",
+    "            'fmin': 30,\n",
+    "            'fmax': 400,\n",
+    "            'hop_length': 64,\n",
+    "            'bins_per_octave': 12,\n",
+    "            'filter_scale': 0.5,\n",
+    "        }\n",
     "\n",
-    "def apply_qtransform(waves):\n",
-    "#     waves = np.hstack(waves)\n",
-    "    waves = waves / np.max(waves)\n",
-    "    waves = torch.from_numpy(waves).float()\n",
+    "        self.bandpass_param = {\n",
+    "          'lf': 30,\n",
+    "          'hf': 400,\n",
+    "          'order': 8, \n",
+    "          'sr': 2048,\n",
+    "        }\n",
+    "cfg = CFG()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "permanent-cookie",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cqt = CQT1992v2(**cfg.qtransform_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "numerical-sapphire",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "    image = cqt(waves).squeeze().numpy()\n",
-    "    return image\n"
+    "df = pd.read_csv(\"../top_min_max.csv\")\n",
+    "df[\"path\"] = df[\"id\"].apply(lambda x: FILE_PATH_DICT[x])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "helpful-accident",
+   "id": "promising-request",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "1/255"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "standing-attack",
+   "id": "chemical-venezuela",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _, row in df[df['target']==1].sample(10, replace=False).iterrows():\n",
-    "    wave = np.load(row[\"path\"])\n",
-    "    xx = apply_qtransform(wave)\n",
-    "    print(xx.shape)\n",
-    "    plt.figure(figsize=(20,20))\n",
-    "    plt.imshow(xx[2])\n",
-    "    plt.title(row['target'])\n",
-    "    plt.show()\n",
-    "    break"
+    "x = np.load(df.loc[0, \"path\"])\n",
+    "# print(np.hstack(x)[:10])\n",
+    "# x = stack_bandpass_turkey_transform(x, cfg.bandpass_param)\n",
+    "# print(x[:10])\n",
+    "print(np.hstack(x)[-10:])\n",
+    "print(x.reshape(-1,)[-10:])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vertical-species",
+   "id": "maritime-semester",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
+    "for i in range(5):\n",
+    "    x = np.load(df.loc[i, \"path\"])\n",
+    "    print(x.std())\n",
+    "    x = stack_bandpass_turkey_transform(x, cfg.bandpass_param)\n",
+    "    print(x.std())\n",
+    "    x = cqt(torch.tensor(x).float())\n",
+    "    x = x.squeeze().numpy()\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    plt.imshow(x)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "julian-administration",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def longestSubarray(nums: List[int]) -> int:\n",
-    "    ones_count_best = 0\n",
-    "    curr = 0\n",
-    "    for i in range(len(nums)):\n",
-    "        if nums[i] == 1:\n",
-    "            curr += 1\n",
-    "        elif nums[i] == 0 and nums[i+1] == 1:\n",
-    "            curr += 1\n",
-    "        else:\n",
-    "            \n",
-    "            if curr > ones_count_best:\n",
-    "                ones_count_best = curr\n",
-    "            curr = 0\n",
-    "        if i == len(nums)-1:\n",
-    "            if curr > ones_count_best:\n",
-    "                ones_count_best = curr\n",
-    "            \n",
-    "        print(curr)\n",
-    "    return ones_count_best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "designing-rating",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "longestSubarray([1,1,0,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "massive-removal",
+   "id": "assigned-prior",
    "metadata": {},
    "outputs": [],
    "source": []
