--- a/notebooks/OOF.ipynb
+++ b/notebooks/OOF.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7efa2c33",
+   "execution_count": 25,
+   "id": "3faa2f1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "59d0a6b8",
+   "execution_count": 26,
+   "id": "91e7730d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "56c65161",
+   "execution_count": 27,
+   "id": "c6e64f38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +82,14 @@
     "        self.bandpass_param = {\n",
     "          'lf': 30,\n",
     "          'hf': 400,\n",
-    "          'order': 8, \n",
-    "          'sr': 2048,\n",
     "        }\n",
     "cfg = CFG()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a827682d",
+   "execution_count": 28,
+   "id": "0d01685e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "008f083b",
+   "execution_count": 29,
+   "id": "a2aa4114",
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "66015469",
+   "execution_count": 30,
+   "id": "0f7745ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "70b8c930",
+   "execution_count": 31,
+   "id": "5bfbce30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ae35a21b",
+   "execution_count": 32,
+   "id": "f99f2b28",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +178,7 @@
        " PosixPath('../weights/CustomModel_v1/015_effnetb0_overfitted_OOF/fold_4/cp_epoch05_score0.85808.pth')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,38 +189,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "21eb9704",
+   "execution_count": 33,
+   "id": "dccc0493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = [\n",
+    "    \"../weights/Wavenet/010_wavenet_bandpass_fp32_cos_10_2021-08-30-05-38-05/fold_0/cp_epoch08_score0.86815.pth\",\n",
+    "    \"../weights/Wavenet/028_wavenet_bandpass_fp32_cos_10_best.yaml/fold_2/cp_epoch11_score0.86913.pth\",\n",
+    "    \"../weights/Wavenet/028_wavenet_bandpass_fp32_cos_10_best.yaml/fold_3/cp_epoch10_score0.86845.pth\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8449a2ad",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CQT kernels created, time used = 0.0058 seconds\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/trytolose/miniconda3/envs/audio/lib/python3.8/site-packages/nnAudio/utils.py:326: SyntaxWarning: If fmax is given, n_bins will be ignored\n",
-      "  warnings.warn('If fmax is given, n_bins will be ignored',SyntaxWarning)\n",
-      "100%|███████████| 875/875 [00:54<00:00, 15.94it/s]\n",
-      "100%|███████████| 875/875 [00:55<00:00, 15.82it/s]\n",
-      "100%|███████████| 875/875 [00:55<00:00, 15.85it/s]\n",
-      "100%|███████████| 875/875 [00:55<00:00, 15.83it/s]\n",
-      "100%|███████████| 875/875 [00:55<00:00, 15.81it/s]\n"
+      "100%|███████████| 875/875 [01:56<00:00,  7.53it/s]\n",
+      "100%|███████████| 875/875 [01:53<00:00,  7.70it/s]\n",
+      "100%|███████████| 875/875 [01:57<00:00,  7.46it/s]\n"
      ]
     }
    ],
    "source": [
-    "model = CustomModel_v1().cuda()\n",
-    "# model = Andrewnet_v3_true().cuda()\n",
-    "transform_f = partial(minmax_bandpass_transform, params=cfg.bandpass_param)\n",
+    "# model = CustomModel_v1().cuda()\n",
+    "model = Andrewnet_v3_true().cuda()\n",
+    "transform_f = partial(minmax_bandpass_transform)\n",
     "loss_fn = torch.nn.BCEWithLogitsLoss(reduction=\"none\")\n",
     "dfs = []\n",
-    "for f, w_path in zip([0,1,2,3,4], paths):\n",
+    "for f, w_path in zip([0,2,3], paths):\n",
     "#     model.load_state_dict(torch.load(f\"../weights/cos_bandpass_minmax_fold_{f}_w.pt\"))\n",
     "    model.load_state_dict(torch.load(w_path))\n",
     "    df_fold = df[df[\"fold\"] == f].reset_index(drop=True)\n",
@@ -255,40 +256,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e65b4089",
+   "execution_count": 39,
+   "id": "247184af",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-59c34a9ac3ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_pred_oof\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_pred_oof = pd.concat(dfs, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8bdf05d5",
+   "execution_count": 40,
+   "id": "aea75a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "336000"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_pred_oof)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "32fea0c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pred_oof.to_csv(\"train_oof_overfit.csv\", index=False)"
+    "df_pred_oof.to_csv(\"train_oof_wavenet_f023.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d68d40f5",
+   "id": "8b2df8c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4fd09034",
+   "id": "2ca685cc",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0c7b12ac",
+   "id": "d4cbf352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c7b83401",
+   "id": "e7dca948",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49afafd8",
+   "id": "ce778e6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -353,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "30b2eb0b",
+   "id": "3735d493",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "de4e72da",
+   "id": "efe842b1",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8e46eb18",
+   "id": "e60cb0b4",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b18ac3",
+   "id": "1b1287b9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -424,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "68cdc248",
+   "id": "f8adbbc6",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0638442d",
+   "id": "46ac0ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01f9afc2",
+   "id": "6abc5bf1",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a5e42d4f",
+   "id": "9803dffb",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "11ad2347",
+   "id": "46bf3fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cf815651",
+   "id": "83bff56a",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bde23450",
+   "id": "6edec66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5d26850c",
+   "id": "04da7602",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993ab712",
+   "id": "2ec5a9ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -575,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c0099f",
+   "id": "3bf952b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -583,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3fcff1",
+   "id": "affc8a2b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -591,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08bd9b53",
+   "id": "093863f5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -599,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7649f0dc",
+   "id": "33c3024b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0d0abfd3",
+   "id": "afd5bb16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5fd97c5c",
+   "id": "f947abd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "919c7b69",
+   "id": "f400c3be",
    "metadata": {},
    "outputs": [],
    "source": []
