--- a/notebooks/OOF.ipynb
+++ b/notebooks/OOF.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "growing-converter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +31,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "previous-baptist",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src.model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-be688e6be159>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCustomModel_v1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAndrewnet_v3_true\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTrainDataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransforms\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstack_bandpass_transform\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_bandpass_turkey_transform\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_turkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src.model'"
+     ]
+    }
+   ],
    "source": [
     "from src.model import CustomModel_v1, Andrewnet_v3_true\n",
     "from src.dataset import TrainDataset\n",
@@ -44,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "adequate-cornwall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "horizontal-penny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +126,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "double-helping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +146,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "turned-scenario",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +186,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "charitable-compound",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "educated-bhutan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "younger-medium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "large-dancing",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +430,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hearing-special",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -436,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "checked-mortgage",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -444,7 +444,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "toxic-closure",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +451,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loved-telling",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +458,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "blond-insured",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "insured-virginia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +476,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "phantom-patch",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +498,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "valid-bible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +507,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "working-grounds",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +528,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fitted-ghana",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -557,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
